<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@android:drawable/btn_star_big_on"
            android:title="@string/menu_home" />
    </group>

    <item android:title="ACTIVIDAD 1">
        <menu>
            <item
                android:id="@+id/nav_tarea_1"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/menu_tarea_1" />
            <item
                android:id="@+id/nav_examen_1"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/menu_examen_1" />
        </menu>
    </item>


    <item android:title="ACTIVIDAD 2">
        <menu>
            <item
                android:id="@+id/nav_tarea_2"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/menu_tarea_2" />
            <item
                android:id="@+id/nav_examen_2"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/menu_examen_2" />
        </menu>
    </item>

    <item android:title="COMUNICACIONES">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
